tdf#168977 docx export: prevent multiple chart rels to embeddings/file

MS Word considers a document to be corrupt
if multiple files have a relationship
to the same embeddings/file.

Since we only round-trip existing embeddings,
just make sure that if we duplicate a chart internally,
that we only write an externalData link once.

make CppunitTest_sw_ooxmlexport4 CPPUNIT_TEST_NAME=testChartInFooter

Change-Id: I8905412b07fdf8dc065d1fed4c239c63aab24935
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196895
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
(cherry picked from commit 81a1539bf2e197de1275af762b26e98652551a8a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196940
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>